Fix overflow in code blocks

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -105,6 +105,7 @@ pre, code {
 
 pre {
   padding: 10px;
+  overflow: scroll;
 }
 
 code {
